--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -15,6 +15,7 @@
 
 		<!-- Query -->
 		<module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.emf.ui</module>
+		<module>../../query/plugins/org.eclipse.viatra.query.runtime.ui</module>
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.generator.model</module>
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.generator.model.ui</module>
 		<module>../../query/plugins/org.eclipse.viatra.query.tooling.core</module>
