[releng] Minor build configuration updates
 * Updates Tycho to 1.2.0; making it unnecessary to have a custom
toolchain configuration included in the repository
 * Moved Zest integration from the parent.incubation module to
parent.all as its version number should indicate
 * Reconfigured eclipse-run calls
   * Adds an explicit Java 8 requirement to them
   * Replaced uses to appArgLine for the more readable applicationsArgs

Change-Id: I8384777eb421dfa6e267a566c6899fbcd529882b
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/addon/plugins/org.eclipse.viatra.addon.viewers.runtime/pom.xml
+++ b/addon/plugins/org.eclipse.viatra.addon.viewers.runtime/pom.xml
@@ -56,7 +56,14 @@
                 <artifactId>tycho-eclipserun-plugin</artifactId>
                 <version>${tycho.version}</version>
                 <configuration>
-                    <appArgLine>-data ${emf.workspace.location} -application org.eclipse.emf.codegen.ecore.Generator -projects ${project.basedir} -model ${project.basedir}/model/notation.genmodel ${project.basedir}</appArgLine>
+                    <applicationsArgs>
+                        <applicationsArg>-data ${emf.workspace.location}</applicationsArg>
+                        <applicationsArg>-application org.eclipse.emf.codegen.ecore.Generator</applicationsArg>
+                        <applicationsArg>-projects ${project.basedir}</applicationsArg>
+                        <applicationsArg> -model</applicationsArg>
+                        <applicationsArg>${project.basedir}/model/notation.genmodel</applicationsArg>
+                        <applicationsArg>${project.basedir}</applicationsArg>
+                    </applicationsArgs>
                     <dependencies>
                         <dependency>
                             <artifactId>org.eclipse.emf.codegen.ecore</artifactId>
@@ -65,9 +72,9 @@
                     </dependencies>
                     <repositories>
                         <repository>
-                            <id>indigo</id>
+                            <id>simrel</id>
                             <layout>p2</layout>
-                            <url>http://download.eclipse.org/releases/mars</url>
+                            <url>${simrel.repository.url}</url>
                         </repository>
                     </repositories>
                 </configuration>
