--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel/pom.xml
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel/pom.xml
@@ -62,7 +62,15 @@
 				<artifactId>tycho-eclipserun-plugin</artifactId>
 				<version>${tycho.version}</version>
 				<configuration>
-					<appArgLine>-data ${project.basedir}/.. -application org.eclipse.emf.codegen.ecore.Generator -model -edit ${project.basedir}/model/GraphicalPatternLanguage.genmodel ${project.basedir}</appArgLine>
+                     <applicationsArgs>
+                        <applicationsArg>-data ${project.basedir}/..</applicationsArg>
+                        <applicationsArg>-application org.eclipse.emf.codegen.ecore.Generator</applicationsArg>
+                        <applicationsArg>-projects ${project.basedir}</applicationsArg>
+                        <applicationsArg>-model</applicationsArg>
+                        <applicationsArg>-edit</applicationsArg>
+                        <applicationsArg>${project.basedir}/model/GraphicalPatternLanguage.genmodel</applicationsArg>
+                        <applicationsArg>${project.basedir}</applicationsArg>
+                    </applicationsArgs>
 					<dependencies>
 						<dependency>
 							<artifactId>org.eclipse.emf.codegen.ecore</artifactId>
@@ -71,9 +79,9 @@
 					</dependencies>
 					<repositories>
 						<repository>
-							<id>indigo</id>
+							<id>simrel</id>
 							<layout>p2</layout>
-							<url>http://download.eclipse.org/releases/mars</url>
+							<url>${simrel.repository.url}</url>
 						</repository>
 					</repositories>
 				</configuration>
