--- a/query/tests/org.eclipse.viatra.query.testing.snapshot/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.testing.snapshot/pom.xml
@@ -50,7 +50,14 @@
 				<artifactId>tycho-eclipserun-plugin</artifactId>
 				<version>${tycho.version}</version>
 				<configuration>
-					<appArgLine>-data ${emf.workspace.location} -application org.eclipse.emf.codegen.ecore.Generator -projects ${project.basedir} -model ${project.basedir}/model/snapshot.genmodel ${project.basedir}</appArgLine>
+                    <applicationsArgs>
+                        <applicationsArg>-data ${emf.workspace.location}</applicationsArg>
+                        <applicationsArg>-application org.eclipse.emf.codegen.ecore.Generator</applicationsArg>
+                        <applicationsArg>-projects ${project.basedir}</applicationsArg>
+                        <applicationsArg>-model</applicationsArg>
+                        <applicationsArg>${project.basedir}/model/snapshot.genmodel</applicationsArg>
+                        <applicationsArg>${project.basedir}</applicationsArg>
+                    </applicationsArgs>
 					<dependencies>
 						<dependency>
 							<artifactId>org.eclipse.emf.codegen.ecore</artifactId>
@@ -59,9 +66,9 @@
 					</dependencies>
 					<repositories>
 						<repository>
-							<id>indigo</id>
+							<id>simrel</id>
 							<layout>p2</layout>
-							<url>http://download.eclipse.org/releases/mars</url>
+							<url>${simrel.repository.url}</url>
 						</repository>
 					</repositories>
 				</configuration>
