--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -10,7 +10,7 @@
     <version>2.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <properties>
-        <tycho.version>1.0.0</tycho.version>
+        <tycho.version>1.2.0</tycho.version>
         <tycho.scmUrl>scm:git:git://git.eclipse.org/gitroot/viatra/org.eclipse.viatra.git</tycho.scmUrl>
         <eclipse.bugzillaUrl>https://bugs.eclipse.org/bugs/enter_bug.cgi?product=viatra</eclipse.bugzillaUrl>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -23,6 +23,7 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <viatra.main.version>2.1.0-SNAPSHOT</viatra.main.version>
         <cbi.jarsigner.version>1.1.3</cbi.jarsigner.version>
+        <simrel.repository.url>http://download.eclipse.org/releases/mars</simrel.repository.url>
         <!-- Composite site related properties -->
         <viatra.updates.dir>updates</viatra.updates.dir>
         <viatra.download.area>target/composite</viatra.download.area>
@@ -164,7 +165,7 @@
                                 <groupId>com.oracle</groupId>
                                 <artifactId>javafxswt</artifactId>
                                 <version>8.0.0-SNAPSHOT</version>
-                                <systemPath>${java.home}/jre/lib/jfxswt.jar</systemPath>
+                                <systemPath>${java.home}/lib/jfxswt.jar</systemPath>
                                 <scope>system</scope>
                             </extraClasspathElement>
                             <extraClasspathElement>
@@ -243,6 +244,14 @@
                         </archive>
                     </configuration>
                 </plugin>
+                <plugin>
+					<groupId>org.eclipse.tycho.extras</groupId>
+					<artifactId>tycho-eclipserun-plugin</artifactId>
+					<version>${tycho.version}</version>
+					<configuration>
+						<executionEnvironment>JavaSE-1.8</executionEnvironment>
+					</configuration>
+				</plugin>
             </plugins>
         </pluginManagement>
     </build>
