--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.emf.ui/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.emf.ui/plugin.xml
@@ -1550,7 +1550,7 @@
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            class="org.eclipse.viatra.query.patternlanguage.emf.ui.ReusablePatternLanguageExecutableExtensionFactory:org.eclipse.viatra.migrator.metadata.ProjectNatureUpdater"
+            class="org.eclipse.viatra.query.patternlanguage.emf.ui.ReusablePatternLanguageExecutableExtensionFactory:org.eclipse.viatra.query.tooling.ui.migrator.metadata.ProjectNatureUpdater"
             commandId="org.eclipse.viatra.query.tooling.migrator.metadata.command">
       </handler>
       <handler
