[538848] Cleans up patternlanguage.ui code after the merge
Change-Id: Ia5edea81b52933d8908200cf70cf9973fd782070
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.emf.ui/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.emf.ui/plugin.xml
@@ -817,9 +817,9 @@
          point="org.eclipse.ui.preferencePages">
       <page
             category="org.eclipse.viatra.query.tooling.ui.viatra"
-            class="org.eclipse.viatra.query.tooling.ui.queryexplorer.preference.PatternInitializationPreferencePage"
+            class="org.eclipse.viatra.query.tooling.ui.preferences.PatternInitializationPreferencePage"
             id="org.eclipse.viatra.query.tooling.ui.queryexplorer"
-            name="Query Explorer">
+            name="Query Evaluation">
          <keywordReference
                id="org.eclipse.viatra.query.patternlanguage.emf.ui.keyword_EMFPatternLanguage">
          </keywordReference>
