--- a/releng/org.eclipse.viatra.parent.incubation/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation/pom.xml
@@ -15,8 +15,7 @@
         <!-- Query -->
         <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel</module>
         <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.edit</module>
-        <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.queries</module>
-        <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.queries.validation</module>
+        <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.validation</module>
         <module>../../query/plugins/org.eclipse.viatra.query.patternlanguage.emf.sirius</module>
         <module>../../query/plugins/org.eclipse.viatra.query.tooling.localsearch.ui</module>
         <module>../../query/plugins/org.eclipse.viatra.query.tooling.ui.retevis</module>
