--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.validation/.project
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.validation/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.viatra.query.patternlanguage.metamodel.queries.validation</name>
+	<name>org.eclipse.viatra.query.patternlanguage.metamodel.validation</name>
 	<comment></comment>
 	<projects>
 	</projects>
