--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.validation/pom.xml
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.validation/pom.xml
@@ -8,6 +8,6 @@
         <version>0.21.0-SNAPSHOT</version>
         <relativePath>../../../releng/org.eclipse.viatra.parent.incubation/pom.xml</relativePath>
     </parent>
-  <artifactId>org.eclipse.viatra.query.patternlanguage.metamodel.queries.validation</artifactId>
+  <artifactId>org.eclipse.viatra.query.patternlanguage.metamodel.validation</artifactId>
   <packaging>eclipse-plugin</packaging>
 </project>
