--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel/build.properties
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel/build.properties
@@ -1,13 +1,3 @@
-# /*******************************************************************************
-#  * Copyright (c) 2010-2018, Zoltan Ujhelyi, IncQuery Labs Ltd.
-#  * All rights reserved. This program and the accompanying materials
-#  * are made available under the terms of the Eclipse Public License v1.0
-#  * which accompanies this distribution, and is available at
-#  * http://www.eclipse.org/legal/epl-v10.html
-#  *
-#  * This file was generated from GraphicalPatternLanguage.genmodel
-#  *******************************************************************************/
-
 bin.includes = .,\
                model/,\
                META-INF/,\
@@ -16,5 +6,6 @@ bin.includes = .,\
 jars.compile.order = .
 source.. = emf-gen/,\
            src/,\
-           xtend-gen/
+           xtend-gen/,\
+           src-gen/
 output.. = bin/
