[539074] Registers validation rules for EMF Validation
Although this does not start validation automatically, it can be
triggered manually, and the results are displayed on the diagram. Some
testing is still required, but this solution is more in synch with the
workflows Sirius expects, thus less likely to break.

The integration API is almost totally independent of the queries used
here, so it might be generalized as a VIATRA Validation Framework
feature if necessary, however, some testing is required before that can
be done.

Change-Id: I253893d57baf9fef39a52110413fd29c40025268
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.emf.sirius/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.emf.sirius/plugin.xml
@@ -75,5 +75,35 @@
         </activeWhen>
      </handler>
   </extension>
-   
+     <extension
+        point="org.eclipse.emf.validation.constraintProviders">
+     <constraintProvider
+           cache="false"
+           class="org.eclipse.viatra.query.patternlanguage.emf.sirius.validation.VQLConstraintProvider"
+           mode="Batch">
+        <package
+              namespaceUri="http://www.eclipse.org/viatra/query/patternlanguage/emf/GraphPatternLanguage">
+        </package>
+     </constraintProvider>
+     <category
+           id="org.eclipse.viatra.query.patternlanguage.emf.sirius.validation"
+           name="VGQL Validation Rules">
+     </category>
+  </extension>
+     <extension
+           point="org.eclipse.emf.validation.constraintBindings">
+        <binding
+              category="org.eclipse.viatra.query.patternlanguage.emf.sirius.validation"
+              context="org.eclipse.viatra.query.patternlanguage.emf.sirius.validation.context">
+        </binding>
+        <clientContext
+              default="false"
+              id="org.eclipse.viatra.query.patternlanguage.emf.sirius.validation.context">
+           <enablement>
+              <instanceof
+                    value="org.eclipse.emf.ecore.EObject">
+              </instanceof>
+           </enablement>
+        </clientContext>
+     </extension>
 </plugin>
