--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.validation/plugin.xml
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.metamodel.validation/plugin.xml
@@ -1,27 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?><plugin>
   <extension id="validation.constraint.org.eclipse.viatra.query.patternlanguage.metamodel.declaredTypeLessSpecific" point="org.eclipse.viatra.addon.validation.runtime.constraint">
-    <constraint class="org.eclipse.viatra.query.patternlanguage.metamodel.DeclaredTypeLessSpecificConstraint0" name="org.eclipse.viatra.query.patternlanguage.metamodel.declaredTypeLessSpecific">
-      <enabledForEditor editorId="*"/>
-    </constraint>
+    <constraint class="org.eclipse.viatra.query.patternlanguage.metamodel.DeclaredTypeLessSpecificConstraint0" name="org.eclipse.viatra.query.patternlanguage.metamodel.declaredTypeLessSpecific"/>
   </extension>
   <extension id="validation.constraint.org.eclipse.viatra.query.patternlanguage.metamodel.inferredTypeLessSpecific" point="org.eclipse.viatra.addon.validation.runtime.constraint">
-    <constraint class="org.eclipse.viatra.query.patternlanguage.metamodel.InferredTypeLessSpecificConstraint0" name="org.eclipse.viatra.query.patternlanguage.metamodel.inferredTypeLessSpecific">
-      <enabledForEditor editorId="*"/>
-    </constraint>
+    <constraint class="org.eclipse.viatra.query.patternlanguage.metamodel.InferredTypeLessSpecificConstraint0" name="org.eclipse.viatra.query.patternlanguage.metamodel.inferredTypeLessSpecific"/>
   </extension>
   <extension id="validation.constraint.org.eclipse.viatra.query.patternlanguage.metamodel.nonConformingType" point="org.eclipse.viatra.addon.validation.runtime.constraint">
-    <constraint class="org.eclipse.viatra.query.patternlanguage.metamodel.NonConformingTypeConstraint0" name="org.eclipse.viatra.query.patternlanguage.metamodel.nonConformingType">
-      <enabledForEditor editorId="*"/>
-    </constraint>
+    <constraint class="org.eclipse.viatra.query.patternlanguage.metamodel.NonConformingTypeConstraint0" name="org.eclipse.viatra.query.patternlanguage.metamodel.nonConformingType"/>
   </extension>
   <extension id="validation.constraint.org.eclipse.viatra.query.patternlanguage.metamodel.undefinedOrMultipleDeclarationParameterType" point="org.eclipse.viatra.addon.validation.runtime.constraint">
-    <constraint class="org.eclipse.viatra.query.patternlanguage.metamodel.UndefinedOrMultipleDeclarationParameterTypeConstraint0" name="org.eclipse.viatra.query.patternlanguage.metamodel.undefinedOrMultipleDeclarationParameterType">
-      <enabledForEditor editorId="*"/>
-    </constraint>
+    <constraint class="org.eclipse.viatra.query.patternlanguage.metamodel.UndefinedOrMultipleDeclarationParameterTypeConstraint0" name="org.eclipse.viatra.query.patternlanguage.metamodel.undefinedOrMultipleDeclarationParameterType"/>
   </extension>
   <extension id="validation.constraint.org.eclipse.viatra.query.patternlanguage.metamodel.undefinedPathExpressionType" point="org.eclipse.viatra.addon.validation.runtime.constraint">
-    <constraint class="org.eclipse.viatra.query.patternlanguage.metamodel.UndefinedPathExpressionTypeConstraint0" name="org.eclipse.viatra.query.patternlanguage.metamodel.undefinedPathExpressionType">
-      <enabledForEditor editorId="*"/>
-    </constraint>
+    <constraint class="org.eclipse.viatra.query.patternlanguage.metamodel.UndefinedPathExpressionTypeConstraint0" name="org.eclipse.viatra.query.patternlanguage.metamodel.undefinedPathExpressionType"/>
   </extension>
 </plugin>
