[543220] Updates Xtext dependency to 2.16
The latest Xtext release already contains fixes to the Maven build
issues, thus updating the dependency to Xtext 2.16 should make the
additional dependency version pins unnecessary.

Furthermore, as Xtext 2.16 requires Oxygen as a minimum target, the
minimum target platform requirement was also increased from Mars to
Oxygen.

Change-Id: I13414371017095974e1186cda6e96c25640a2761
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -76,7 +76,7 @@
 		<relativePath>../org.eclipse.viatra.parent/pom.xml</relativePath>
 	</parent>
 	<properties>
-		<target.classifier>mars</target.classifier>
+		<target.classifier>oxygen</target.classifier>
 		<!-- Sonar -->
 		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
 		<sonar.jacoco.reportPaths>${jacoco.targetdir}/jacoco.exec</sonar.jacoco.reportPaths>
