--- a/addon/plugins/org.eclipse.viatra.addon.viewers.runtime/build.properties
+++ b/addon/plugins/org.eclipse.viatra.addon.viewers.runtime/build.properties
@@ -1,8 +1,7 @@
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               about.html,\
-               plugin.properties
+               about.html
 source.. = src/,\
            src-gen/,\
            emf-gen/
