[547075] Extends test framework with custom EMF object serialization
The snapshot helper has been extended by a configurable map for custom
functions, which can be used for creating custom substitutions for EMF
objects of given types. A collection of tests has been also created.


Change-Id: If932372a343e832b7649e5d8626dddfaaa88e8a9
Signed-off-by: Geza Kulcsar <geza.kulcsar@incquerylabs.com>

--- a/query/tests/org.eclipse.viatra.query.runtime.cps.tests/plugin.xml
+++ b/query/tests/org.eclipse.viatra.query.runtime.cps.tests/plugin.xml
@@ -48,6 +48,11 @@
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.AppInstanceAllocatedToHostInstance"/>
     </group>
   </extension>
+  <extension id="org.eclipse.viatra.query.runtime.cps.tests.queries.CustomEMFTestQueries" point="org.eclipse.viatra.query.runtime.queryspecification">
+    <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.query.runtime.cps.tests.queries.CustomEMFTestQueries" id="org.eclipse.viatra.query.runtime.cps.tests.queries.CustomEMFTestQueries">
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.ChildAndCommon"/>
+    </group>
+  </extension>
   <extension id="org.eclipse.viatra.query.runtime.cps.tests.queries.DanglingTestQueries" point="org.eclipse.viatra.query.runtime.queryspecification">
     <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.query.runtime.cps.tests.queries.DanglingTestQueries" id="org.eclipse.viatra.query.runtime.cps.tests.queries.DanglingTestQueries">
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.stateToState1"/>
