[542664] Exclude ASM-related dependencies from Guice
Our code do not use the aspect-oriented functionality of Guice, thus it
is not required to include old versions of ASM via Guice. Xtext does the
same as can be seen in
https://search.maven.org/artifact/org.eclipse.xtext/org.eclipse.xtext.util/2.18.0/jar

Change-Id: Id98e5fbbb09b9c3f0ec684fa93a38cd75e38a68d
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/maven/viatra-query-language/pom.xml
+++ b/maven/viatra-query-language/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>guice</artifactId>
             <version>3.0</version>
             <classifier>no_aop</classifier>
+            <exclusions>
+                <exclusion>
+                    <artifactId>cglib</artifactId>
+                    <groupId>*</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.google.inject.extensions</groupId>
