[542664] Exclude ASM-related dependencies from Guice dependency
Our code do not use the aspect-oriented functionality of Guice, thus it
is not required to include old versions of ASM via Guice. Xtext does the
same as can be seen in
https://search.maven.org/artifact/org.eclipse.xtext/org.eclipse.xtext.util/2.18.0/jar

--- a/maven/viatra-query-language/pom.xml
+++ b/maven/viatra-query-language/pom.xml
@@ -69,6 +69,12 @@
             <groupId>com.google.inject.extensions</groupId>
             <artifactId>guice-multibindings</artifactId>
             <version>3.0</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>cglib</artifactId>
+                    <groupId>*</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>        
     </dependencies>
     <parent>
