--- a/maven/viatra-query-testing/pom.xml
+++ b/maven/viatra-query-testing/pom.xml
@@ -37,6 +37,11 @@
             </exclusions>
         </dependency> 
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>[14.0,22)</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
