--- a/releng/org.eclipse.viatra.parent.incubation.maven/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation.maven/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>org.eclipse.viatra.parent.incubation.maven</artifactId>
     <name>VIATRA Eclipse Project (Maven Incubation Features)</name>
-    <version>0.23.0-SNAPSHOT</version>
+    <version>0.24.0-SNAPSHOT</version>
     <url>http://eclipse.org/viatra</url>
     <packaging>pom</packaging>
     <modules>
@@ -37,6 +37,9 @@
         <version>2.4.0-SNAPSHOT</version>
         <relativePath>../org.eclipse.viatra.parent.core/pom.xml</relativePath>
     </parent>
+    <properties>
+        <viatra.incubation.version>0.24.0-SNAPSHOT</viatra.incubation.version>
+    </properties>
     <repositories>
         <repository>
             <id>viatra.nexus</id>
