[561118] Dependency version updates
  * Target platform updated to 2019-06
    * Minimum versions were not updated in plugin code, but we will not
test with earlier versions
    * RCPTT was bumped to 2.4.4
  * Xtext minimum version is 2.20
    * Updates pom use exec-maven-plugin for mwe as suggested by Xtext
    * Replaces deprecated Xtext generator support for VQGEN language
    * Removes unnecessary Xpand dependencies
  * Guava requirement is updated to 2.27.1 (in synch with Xtext)
    * Maven dependency override removed as Xtext has fixed its used
Guava version to 27.1.0
  * Eclipse Collections is updated to 10.2.0
  * Regenerated Eclipse project configuration for Maven projects

Change-Id: I17f0e05cb4d6d79c04dd1df52eac44768881aefd
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -18,13 +18,14 @@
 		<maven.compiler.showWarnings>true</maven.compiler.showWarnings>
 		<jacoco.version>0.7.6.201602180812</jacoco.version>
 		<jacoco.targetdir>${project.basedir}/../../jacoco</jacoco.targetdir>
-		<xtend.compiler.version>2.16.0</xtend.compiler.version>
+		<xtend.compiler.version>2.20.0</xtend.compiler.version>
+		<mwe.version>2.11.1</mwe.version>
 		<java.version>1.8</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<viatra.main.version>2.4.0-SNAPSHOT</viatra.main.version>
 		<cbi.jarsigner.version>1.1.3</cbi.jarsigner.version>
-		<simrel.repository.url>http://download.eclipse.org/releases/mars</simrel.repository.url>
+		<simrel.repository.url>http://download.eclipse.org/releases/2019-06</simrel.repository.url>
 		<!-- Composite site related properties -->
 		<viatra.updates.dir>updates</viatra.updates.dir>
 		<viatra.download.area>target/composite</viatra.download.area>
