--- a/query/plugins/org.eclipse.viatra.query.patternlanguage.emf/pom.xml
+++ b/query/plugins/org.eclipse.viatra.query.patternlanguage.emf/pom.xml
@@ -52,21 +52,56 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.fornax.toolsupport</groupId>
-                <artifactId>fornax-oaw-m2-plugin</artifactId>
-                <version>3.5.1</version>
-                <configuration>
-                    <workflowEngine>mwe2</workflowEngine>
-                    <workflowDescriptor>src/org/eclipse/viatra/query/patternlanguage/emf/GenerateEMFPatternLanguage.mwe2</workflowDescriptor>
-                </configuration>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
                 <executions>
                     <execution>
+                        <id>mwe2Launcher</id>
                         <phase>generate-sources</phase>
                         <goals>
-                            <goal>run-workflow</goal>
+                            <goal>java</goal>
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <mainClass>org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher</mainClass>
+                    <arguments>
+                        <argument>/${project.basedir}/src/org/eclipse/viatra/query/patternlanguage/emf/GenerateEMFPatternLanguage.mwe2</argument>
+                        <argument>-p</argument>
+                        <argument>rootPath=/${project.basedir}/..</argument>
+                    </arguments>
+                    <classpathScope>compile</classpathScope>
+                    <includePluginDependencies>true</includePluginDependencies>
+                    <cleanupDaemonThreads>false</cleanupDaemonThreads><!-- see https://bugs.eclipse.org/bugs/show_bug.cgi?id=475098#c3 -->
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.eclipse.emf</groupId>
+                        <artifactId>org.eclipse.emf.mwe2.launch</artifactId>
+                        <version>${mwe.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.eclipse.xtext</groupId>
+                        <artifactId>org.eclipse.xtext.common.types</artifactId>
+                        <version>${xtend.compiler.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.eclipse.xtext</groupId>
+                        <artifactId>org.eclipse.xtext.xtext.generator</artifactId>
+                        <version>${xtend.compiler.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.eclipse.xtext</groupId>
+                        <artifactId>org.eclipse.xtext.xbase</artifactId>
+                        <version>${xtend.compiler.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.eclipse.xtext</groupId>
+                        <artifactId>xtext-antlr-generator</artifactId>
+                        <version>2.1.1</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.eclipse.xtend</groupId>
