--- a/query/plugins/org.eclipse.viatra.query.tooling.generator.model/build.properties
+++ b/query/plugins/org.eclipse.viatra.query.tooling.generator.model/build.properties
@@ -7,4 +7,9 @@ bin.includes = model/,\
                plugin.xml,\
                about.html
 src.includes = about.html
-
+additional.bundles = org.objectweb.asm,\
+                     org.eclipse.emf.mwe2.launch,\
+                     org.eclipse.emf.mwe2.lib,\
+                     org.eclipse.xtext.generator,\
+                     org.eclipse.xtext.xtext.generator,\
+                     org.apache.commons.logging
