--- a/query/plugins/org.eclipse.viatra.query.tooling.generator.model/build.properties
+++ b/query/plugins/org.eclipse.viatra.query.tooling.generator.model/build.properties
@@ -12,4 +12,5 @@ additional.bundles = org.objectweb.asm,\
                      org.eclipse.emf.mwe2.lib,\
                      org.eclipse.xtext.generator,\
                      org.eclipse.xtext.xtext.generator,\
-                     org.apache.commons.logging
+                     org.apache.commons.logging,\
+                     org.eclipse.equinox.common
