[567075] Bumps Guava version in test framework
Change-Id: Ie69a47e10b492457481d4607e2ae74f82ffa689b
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/maven/viatra-query-testing/pom.xml
+++ b/maven/viatra-query-testing/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>[14.0,22)</version>
+            <version>${guava.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
