--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -19,6 +19,7 @@
 		<jacoco.version>0.7.6.201602180812</jacoco.version>
 		<jacoco.targetdir>${project.basedir}/../../jacoco</jacoco.targetdir>
 		<xtend.compiler.version>2.20.0</xtend.compiler.version>
+		<guava.version>27.1-jre</guava.version>
 		<mwe.version>2.11.1</mwe.version>
 		<java.version>1.8</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
