Add Xtext bom to build configuration
In addition to adding the BOM a few Maven dependencies were updated to
handle the Maven build correctly after new eclipse plugin version are
available in Maven central.

Change-Id: I5f1f77421923588ddc0a37d6e114acd9975bee01
Signed-off-by: Zoltan Ujhelyi <zoltan.ujhelyi@incquerylabs.com>

--- a/releng/org.eclipse.viatra.parent/pom.xml
+++ b/releng/org.eclipse.viatra.parent/pom.xml
@@ -253,6 +253,17 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	<dependencyManagement>
+	  <dependencies>
+	  <dependency>
+	    <groupId>org.eclipse.xtext</groupId>
+	    <artifactId>xtext-dev-bom</artifactId>
+	    <version>${xtend.compiler.version}</version>
+	    <type>pom</type>
+	    <scope>import</scope>
+	  </dependency>
+	  </dependencies>
+	</dependencyManagement>
 	<distributionManagement>
 		<repository>
 			<id>repo.eclipse.org</id>
