--- a/query/plugins/org.eclipse.viatra.query.tooling.generator.model/pom.xml
+++ b/query/plugins/org.eclipse.viatra.query.tooling.generator.model/pom.xml
@@ -100,11 +100,31 @@
 						<groupId>org.eclipse.emf</groupId>
 						<artifactId>org.eclipse.emf.codegen</artifactId>
 						<version>2.14.0</version>
+						<exclusions>
+							<exclusion>
+								<groupId>org.eclipse.platform</groupId>
+								<artifactId>org.eclipse.core.runtime</artifactId>
+							</exclusion>
+							<exclusion>
+								<groupId>org.eclipse.jdt</groupId>
+								<artifactId>org.eclipse.jdt.launching</artifactId>
+							</exclusion>
+						</exclusions>
 					</dependency>
 					<dependency>
 						<groupId>org.eclipse.emf</groupId>
 						<artifactId>org.eclipse.emf.codegen.ecore</artifactId>
 						<version>2.15.0</version>
+						<exclusions>
+							<exclusion>
+								<groupId>org.eclipse.platform</groupId>
+								<artifactId>org.eclipse.core.runtime</artifactId>
+							</exclusion>
+							<exclusion>
+								<groupId>org.eclipse.jdt</groupId>
+								<artifactId>org.eclipse.jdt.launching</artifactId>
+							</exclusion>
+						</exclusions>
 					</dependency>
 				</dependencies>
 			</plugin>
